# fsh

./: .gitignore  README.md  dune-project  fsh.opam
lib/: builtins.ml  builtins_base.ml  config.ml  dune  errors.ml  eval.ml  fsh.ml  keywords.ml  loop_execution.ml  lterm_repl.ml  multiline.ml  tokenizer.ml  types.ml
lib/builtins/: builtins_computation.ml  builtins_introspection.ml  builtins_io.ml  builtins_stack.ml  builtins_system.ml
test/: dune  test_builtins.ml  test_eval.ml  test_integration.ml  test_loops.ml  test_loops.ml.empty
test/builtins/: dune  test_computation.ml  test_io.ml  test_stack.ml  test_system.ml
